# soundalyzer

./: Cargo.toml  README.md
src/: lib.rs  midi_backend.rs  midi_sync.rs  portaudio_backend.rs
src/linealyzer/: main.rs  metaphone.rs  syscallmap.rs
test/: echohi.strace  gen_syscallmap.sh  strace_names.sh
