[package]
name = "soundalyzer"
version = "0.1.0"
authors = ["Denis Lavrov <bahus.vel@gmail.com>"]

[lib]
name = "soundalyzer"
path = "src/lib.rs"

[dependencies]
portaudio = "0.7.0"
phf = "0.7.22"
phf_macros = "0.7.22"
lazy_static = "1.0.2"
synth = "0.11.0"
pitch_calc = "0.11.1"
sample = "0.10.0"
clap = "2.32.0"
pcap = "0.7.0"
nix = "0.11.0"
spin = "0.4.8"

[dependencies.midir]
version = "0.5.0"
# features = ["jack"]
